Falto especificar un error de configuracion en .htaccess

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
    <title>TianguisCabal: Error</title>
   </head>
   <body>
-    <h1>The web server isn't serving php files first.</h1>
+    <h1>The web server isn't serving php files first. Or you have a missconfiguration in .htaccess</h1>
     <p>This usually happends because:</p>
     <dl>
     <dt>You don't have PHP installed:</dt>
